--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "gulp-header": "2.0.1",
         "gulp-rename": "^1.2.2",
         "gulp-sass": "^3.1.0",
-        "gulp-uglify": "3.0.0"
+        "gulp-uglify": "3.0.0",
+        "slick-carousel": "^1.8.1"
     }
 }
