--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "dependencies": {
         "bootstrap": "4.0.0",
         "font-awesome": "4.7.0",
-        "jquery": "3.3.1",
+        "jquery": "^3.4.0",
         "jquery.easing": "^1.4.1"
     },
     "devDependencies": {
-        "browser-sync": "^2.26.3",
-        "gulp": "^4.0.0",
+        "browser-sync": "^2.26.5",
+        "gulp": "^3.9.1",
         "gulp-clean-css": "3.9.2",
         "gulp-header": "2.0.1",
         "gulp-rename": "^1.4.0",
