[AJK-006-fix] fix: add file to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ vendor/font-awesome/css
 vendor/font-awesome/fonts
 vendor/jquery
 vendor/jquery-easing
+vendor/fontawesome-free
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
