--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.10.2",
         "font-awesome": "4.7.0",
+        "gulp-babel": "^8.0.0",
         "jquery": "3.4.1",
         "jquery.easing": "^1.4.1"
     },
     "devDependencies": {
+        "@babel/core": "^7.8.3",
+        "@babel/preset-env": "^7.8.3",
+        "@babel/register": "^7.8.3",
         "bootstrap": "^4.4.1",
         "browser-sync": "2.26.7",
         "del": "5.1.0",
