--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
     "description": "Package for AJK website",
     "author": "Enamils",
     "dependencies": {
-        "@fortawesome/fontawesome-free": "5.12.0",
+        "@fortawesome/fontawesome-free": "5.13.0",
+        "@glidejs/glide": "^3.4.1",
         "font-awesome": "4.7.0",
         "gulp-babel": "^8.0.0",
         "jquery": "3.4.1",
         "jquery.easing": "^1.4.1"
     },
     "devDependencies": {
-        "@babel/core": "^7.8.4",
-        "@babel/preset-env": "^7.8.4",
-        "@babel/register": "^7.8.3",
+        "@babel/core": "^7.9.0",
+        "@babel/preset-env": "^7.9.0",
+        "@babel/register": "^7.9.0",
         "bootstrap": "^4.4.1",
         "browser-sync": "2.26.7",
         "del": "5.1.0",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "7.0.1",
-        "gulp-clean-css": "4.2.0",
+        "gulp-clean-css": "4.3.0",
         "gulp-header": "2.0.9",
         "gulp-plumber": "^1.2.1",
         "gulp-rename": "2.0.0",
