--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ Icon
 
 ### FILES ###
 vendor/**/**
+public/dist
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
