--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
         "gulp-rename": "2.0.0",
         "gulp-sass": "4.0.2",
         "gulp-uglify": "3.0.2",
+        "js-yaml": "^3.13.1",
         "merge-stream": "2.0.0",
+        "node": "^13.12.0",
         "slick-carousel": "^1.8.1",
         "webpack": "^4.42.1",
         "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3"
+        "webpack-dev-server": "^3.10.3",
+        "webpackbar": "^4.0.0"
     }
 }
