--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
         "@babel/core": "^7.9.0",
         "@babel/preset-env": "^7.9.0",
         "@babel/register": "^7.9.0",
+        "autoprefixer": "^9.7.5",
         "babel-loader": "^8.1.0",
         "bootstrap": "^4.4.1",
         "browser-sync": "2.26.7",
+        "css-loader": "^3.4.2",
         "del": "5.1.0",
+        "file-loader": "^6.0.0",
+        "glob": "^7.1.6",
         "gulp": "4.0.2",
         "gulp-autoprefixer": "7.0.1",
         "gulp-clean-css": "4.3.0",
@@ -35,8 +39,14 @@
         "gulp-uglify": "3.0.2",
         "js-yaml": "^3.13.1",
         "merge-stream": "2.0.0",
+        "mini-css-extract-plugin": "^0.9.0",
         "node": "^13.12.0",
+        "node-sass": "^4.13.1",
+        "postcss-loader": "^3.0.0",
+        "resolve-url-loader": "^3.1.1",
+        "sass-loader": "^8.0.2",
         "slick-carousel": "^1.8.1",
+        "style-loader": "^1.1.3",
         "webpack": "^4.42.1",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3",
