--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "title": "AJK",
     "name": "ajk-agency",
-    "version": "5.0.0",
+    "version": "6.0.1",
     "scripts": {
         "start": "node_modules/.bin/gulp watch",
         "build": "webpack --mode=development",
@@ -18,10 +18,12 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.13.0",
         "@glidejs/glide": "^3.4.1",
+        "bootstrap": "^4.4.1",
         "font-awesome": "4.7.0",
         "gulp-babel": "^8.0.0",
         "jquery": "3.5.0",
-        "jquery.easing": "^1.4.1"
+        "jquery.easing": "^1.4.1",
+        "popper.js": "^1.16.1"
     },
     "devDependencies": {
         "@babel/core": "^7.9.0",
@@ -29,33 +31,20 @@
         "@babel/register": "^7.9.0",
         "autoprefixer": "^9.7.6",
         "babel-loader": "^8.1.0",
-        "bootstrap": "^4.4.1",
-        "browser-sync": "2.26.7",
+        "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^3.5.3",
-        "del": "5.1.0",
         "fast-glob": "^3.2.2",
         "file-loader": "^6.0.0",
         "glob": "^7.1.6",
-        "gulp": "4.0.2",
-        "gulp-autoprefixer": "7.0.1",
-        "gulp-clean-css": "4.3.0",
-        "gulp-header": "2.0.9",
-        "gulp-plumber": "^1.2.1",
-        "gulp-rename": "2.0.0",
-        "gulp-sass": "4.1.0",
-        "gulp-uglify": "3.0.2",
         "js-yaml": "^3.13.1",
-        "merge-stream": "2.0.0",
         "mini-css-extract-plugin": "^0.9.0",
         "node": "^14.0.0",
         "node-sass": "^4.14.0",
         "postcss-loader": "^3.0.0",
         "resolve-url-loader": "^3.1.1",
         "sass-loader": "^8.0.2",
-        "slick-carousel": "^1.8.1",
         "speed-measure-webpack-plugin": "^1.3.3",
         "style-loader": "^1.2.0",
-        "uglifyjs-webpack-plugin": "^2.2.0",
         "url-loader": "^4.0.0",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
