--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "version": "6.0.1",
     "scripts": {
         "start": "node_modules/.bin/gulp watch",
+        "clean": "rm -rf node_modules && npm install",
         "build": "webpack --mode=development",
         "prod": "webpack --mode=production",
         "watch": "webpack-dev-server --mode=development"
@@ -20,14 +21,15 @@
         "@glidejs/glide": "^3.4.1",
         "bootstrap": "^4.4.1",
         "font-awesome": "4.7.0",
-        "gulp-babel": "^8.0.0",
         "jquery": "3.5.0",
         "jquery.easing": "^1.4.1",
-        "popper.js": "^1.16.1"
+        "lazysizes": "^5.2.0",
+        "popper.js": "^1.16.1",
+        "smooth-scroll": "^16.1.3"
     },
     "devDependencies": {
-        "@babel/core": "^7.9.0",
-        "@babel/preset-env": "^7.9.5",
+        "@babel/core": "^7.9.6",
+        "@babel/preset-env": "^7.9.6",
         "@babel/register": "^7.9.0",
         "autoprefixer": "^9.7.6",
         "babel-loader": "^8.1.0",
@@ -44,7 +46,7 @@
         "resolve-url-loader": "^3.1.1",
         "sass-loader": "^8.0.2",
         "speed-measure-webpack-plugin": "^1.3.3",
-        "style-loader": "^1.2.0",
+        "style-loader": "^1.2.1",
         "url-loader": "^4.0.0",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
