--- a/config.yml
+++ b/config.yml
@@ -4,7 +4,7 @@ PATHS:
     images: "./src/assets/images/*/*"
     fonts: "./src/assets/fonts/*"
   vendor:
-    - "./src/assets/vendor/jquery/jquery.slim.min.js"
+    - "./src/assets/vendor/jquery/jquery.min.js"
   javascript:
     - "./src/assets/javascript/jqBootstrapValidation.js"
     - "./src/assets/javascript/contact_me.js"
