--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "clean": "rm -rf node_modules && npm install",
         "build": "webpack --mode=development",
         "prod": "webpack --mode=production",
-        "watch": "webpack-dev-server --mode=development"
+        "watch": "webpack-dev-server --mode=production"
     },
     "description": "Package for AJK website",
     "author": "Enamils",
@@ -21,7 +21,7 @@
         "@glidejs/glide": "^3.4.1",
         "bootstrap": "^4.4.1",
         "font-awesome": "4.7.0",
-        "jquery": "3.5.0",
+        "jquery": "3.4.1",
         "jquery.easing": "^1.4.1",
         "lazysizes": "^5.2.0",
         "popper.js": "^1.16.1",
