--- a/package.json
+++ b/package.json
@@ -19,38 +19,41 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.13.0",
         "@glidejs/glide": "^3.4.1",
-        "bootstrap": "^4.4.1",
+        "@vime-js/lite": "^1.6.1",
+        "bootstrap": "^4.5.0",
         "font-awesome": "4.7.0",
         "jquery": "3.4.1",
-        "jquery.easing": "^1.4.1",
         "lazysizes": "^5.2.0",
         "popper.js": "^1.16.1",
+        "rellax": "^1.10.1",
         "smooth-scroll": "^16.1.3"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
         "@babel/preset-env": "^7.9.6",
         "@babel/register": "^7.9.0",
-        "autoprefixer": "^9.7.6",
+        "autoprefixer": "^9.8.0",
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^3.5.3",
         "fast-glob": "^3.2.2",
         "file-loader": "^6.0.0",
         "glob": "^7.1.6",
-        "js-yaml": "^3.13.1",
+        "js-yaml": "^3.14.0",
         "mini-css-extract-plugin": "^0.9.0",
-        "node": "^14.0.0",
-        "node-sass": "^4.14.0",
+        "node": "^14.2.0",
+        "node-sass": "^4.14.1",
         "postcss-loader": "^3.0.0",
+        "purgecss": "^2.2.1",
         "resolve-url-loader": "^3.1.1",
         "sass-loader": "^8.0.2",
         "speed-measure-webpack-plugin": "^1.3.3",
         "style-loader": "^1.2.1",
         "url-loader": "^4.0.0",
         "webpack": "^4.43.0",
+        "webpack-bundle-analyzer": "^3.8.0",
         "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3",
+        "webpack-dev-server": "^3.11.0",
         "webpackbar": "^4.0.0"
     }
 }
