feat: add few plugins & fix some css

--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,6 @@
 PATHS:
   dist: "./public/dist"
+  src: "./src/assets/vendor"
   assets:
     images: "./src/assets/images/*/*"
     fonts: "./src/assets/fonts/*"
