--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "clean": "rm -rf node_modules && npm install",
         "build": "webpack --mode=development",
         "prod": "webpack --mode=production",
-        "watch": "webpack-dev-server --mode=production"
+        "watch": "webpack-dev-server --mode=development"
     },
     "description": "Package for AJK website",
     "author": "Enamils",
@@ -23,15 +23,15 @@
         "bootstrap": "^4.5.0",
         "font-awesome": "4.7.0",
         "jquery": "3.4.1",
-        "lazysizes": "^5.2.0",
+        "lazysizes": "^5.2.2",
         "popper.js": "^1.16.1",
         "rellax": "^1.10.1",
         "smooth-scroll": "^16.1.3"
     },
     "devDependencies": {
-        "@babel/core": "^7.9.6",
-        "@babel/preset-env": "^7.9.6",
-        "@babel/register": "^7.9.0",
+        "@babel/core": "^7.10.2",
+        "@babel/preset-env": "^7.10.2",
+        "@babel/register": "^7.10.1",
         "autoprefixer": "^9.8.0",
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
@@ -41,10 +41,11 @@
         "glob": "^7.1.6",
         "js-yaml": "^3.14.0",
         "mini-css-extract-plugin": "^0.9.0",
-        "node": "^14.2.0",
+        "node": "^14.4.0",
         "node-sass": "^4.14.1",
         "postcss-loader": "^3.0.0",
         "purgecss": "^2.2.1",
+        "purgecss-webpack-plugin": "^2.2.0",
         "resolve-url-loader": "^3.1.1",
         "sass-loader": "^8.0.2",
         "speed-measure-webpack-plugin": "^1.3.3",
