--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "clean": "rm -rf node_modules && npm install",
         "build": "webpack --mode=development",
         "prod": "webpack --mode=production",
-        "watch": "webpack-dev-server --mode=development"
+        "watch": "webpack serve --mode=development"
     },
     "description": "Package for AJK website",
     "author": "Enamils",
@@ -19,42 +19,42 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "5.13.0",
         "@glidejs/glide": "^3.4.1",
-        "@vime-js/lite": "^1.6.1",
-        "bootstrap": "^4.5.0",
+        "@vime-js/lite": "^1.6.6",
+        "bootstrap": "^4.6.0",
         "font-awesome": "4.7.0",
         "jquery": "3.4.1",
-        "lazysizes": "^5.2.2",
+        "lazysizes": "^5.3.0",
         "popper.js": "^1.16.1",
         "rellax": "^1.10.1",
         "smooth-scroll": "^16.1.3"
     },
     "devDependencies": {
-        "@babel/core": "^7.10.2",
-        "@babel/preset-env": "^7.10.2",
-        "@babel/register": "^7.10.1",
-        "autoprefixer": "^9.8.0",
-        "babel-loader": "^8.1.0",
+        "@babel/core": "^7.12.10",
+        "@babel/preset-env": "^7.12.11",
+        "@babel/register": "^7.12.10",
+        "autoprefixer": "^10.2.3",
+        "babel-loader": "^8.2.2",
         "clean-webpack-plugin": "^3.0.0",
-        "css-loader": "^3.6.0",
-        "fast-glob": "^3.2.4",
-        "file-loader": "^6.0.0",
+        "css-loader": "^5.0.1",
+        "fast-glob": "^3.2.5",
+        "file-loader": "^6.2.0",
         "glob": "^7.1.6",
-        "js-yaml": "^3.14.0",
-        "mini-css-extract-plugin": "^0.9.0",
-        "node": "^14.4.0",
-        "node-sass": "^4.14.1",
-        "postcss-loader": "^3.0.0",
-        "purgecss": "^2.3.0",
-        "purgecss-webpack-plugin": "^2.3.0",
-        "resolve-url-loader": "^3.1.1",
-        "sass-loader": "^8.0.2",
+        "js-yaml": "^4.0.0",
+        "mini-css-extract-plugin": "^1.3.4",
+        "node": "^15.4.0",
+        "node-sass": "^5.0.0",
+        "postcss-loader": "^4.2.0",
+        "purgecss": "^4.0.0",
+        "purgecss-webpack-plugin": "^4.0.0",
+        "resolve-url-loader": "^3.1.2",
+        "sass-loader": "^10.1.1",
         "speed-measure-webpack-plugin": "^1.3.3",
-        "style-loader": "^1.2.1",
-        "url-loader": "^4.0.0",
-        "webpack": "^4.43.0",
-        "webpack-bundle-analyzer": "^3.8.0",
-        "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.11.0",
-        "webpackbar": "^4.0.0"
+        "style-loader": "^2.0.0",
+        "url-loader": "^4.1.1",
+        "webpack": "^5.17.0",
+        "webpack-bundle-analyzer": "^4.4.0",
+        "webpack-cli": "^4.4.0",
+        "webpack-dev-server": "^3.11.2",
+        "webpackbar": "^5.0.0-3"
     }
 }
