--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "fast-glob": "^3.2.5",
         "file-loader": "^6.2.0",
         "glob": "^7.1.6",
+        "image-webpack-loader": "^7.0.1",
         "js-yaml": "^4.0.0",
         "mini-css-extract-plugin": "^1.3.4",
         "node": "^15.4.0",
