--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "version": "6.0.2",
     "scripts": {
         "clean": "rm -rf node_modules && npm install",
-        "build": "cross-env NODE_ENV=development webpack --config webpack.config.js",
-        "prod": "cross-env NODE_ENV=production webpack --config webpack.config.js",
-        "watch": "cross-env NODE_ENV=development webpack serve --config webpack.config.js"
+        "build": "cross-env NODE_ENV=development webpack --mode=development --config webpack.config.js",
+        "prod": "cross-env NODE_ENV=production webpack --mode=production --config webpack.config.js",
+        "watch": "cross-env NODE_ENV=development webpack-dev-server --mode=development --config webpack.config.js"
     },
     "description": "Package for AJK website",
     "author": "Enamils",
@@ -39,19 +39,18 @@
         "fast-glob": "^3.2.5",
         "file-loader": "^6.2.0",
         "glob": "^7.1.6",
+        "html-webpack-plugin": "^4.5.2",
         "image-webpack-loader": "^7.0.1",
         "js-yaml": "^4.0.0",
-        "mini-css-extract-plugin": "^1.3.4",
+        "mini-css-extract-plugin": "^1.3.9",
         "node": "^15.4.0",
         "node-sass": "^5.0.0",
         "postcss-loader": "^4.2.0",
-        "purgecss": "^4.0.0",
-        "purgecss-webpack-plugin": "^4.0.0",
         "sass-loader": "^10.1.1",
         "speed-measure-webpack-plugin": "^1.4.2",
-        "webpack": "^5.23.0",
+        "webpack": "^4.46.0",
         "webpack-bundle-analyzer": "^4.4.0",
-        "webpack-cli": "^4.4.0",
+        "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.11.2",
         "webpackbar": "^5.0.0-3"
     }
