--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name": "ajk-agency",
     "version": "6.0.2",
     "scripts": {
-        "clean": "rm -rf node_modules && npm install",
+        "clean": "rm -rf node_modules && yarn",
         "build": "cross-env NODE_ENV=development webpack --mode=development --config webpack.config.js",
         "prod": "cross-env NODE_ENV=production webpack --mode=production --config webpack.config.js",
         "watch": "cross-env NODE_ENV=development webpack-dev-server --mode=development --config webpack.config.js"
@@ -36,6 +36,7 @@
         "clean-webpack-plugin": "^3.0.0",
         "cross-env": "^7.0.2",
         "css-loader": "^5.0.1",
+        "ejs-loader": "^0.5.0",
         "fast-glob": "^3.2.5",
         "file-loader": "^6.2.0",
         "glob": "^7.1.6",
