--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "autoprefixer": "^10.2.3",
         "babel-loader": "^8.2.2",
         "clean-webpack-plugin": "^3.0.0",
+        "compile-ejs-loader": "^0.0.3",
         "cross-env": "^7.0.2",
         "css-loader": "^5.0.1",
         "ejs-loader": "^0.5.0",
