--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "@fortawesome/fontawesome-free": "5.13.0",
         "@glidejs/glide": "^3.6.0",
         "@vime-js/lite": "^1.6.6",
-        "bootstrap": "^4.6.0",
+        "bootstrap": "^4.6.2",
         "font-awesome": "4.7.0",
         "jquery": "3.4.1",
         "lazysizes": "^5.3.1",
@@ -28,32 +28,32 @@
         "smooth-scroll": "^16.1.3"
     },
     "devDependencies": {
-        "@babel/core": "^7.12.10",
-        "@babel/preset-env": "^7.12.11",
-        "@babel/register": "^7.12.10",
-        "autoprefixer": "^10.2.3",
-        "babel-loader": "^8.2.2",
+        "@babel/core": "^7.23.7",
+        "@babel/preset-env": "^7.23.8",
+        "@babel/register": "^7.23.7",
+        "autoprefixer": "^10.4.17",
+        "babel-loader": "^8.3.0",
         "clean-webpack-plugin": "^3.0.0",
         "compile-ejs-loader": "^0.0.3",
         "cross-env": "^7.0.2",
         "css-loader": "^5.0.1",
-        "fast-glob": "^3.2.5",
+        "fast-glob": "^3.3.2",
         "file-loader": "^6.2.0",
         "filemanager-webpack-plugin": "^8.0.0",
         "glob": "^7.1.6",
         "html-webpack-plugin": "^4.5.2",
         "image-webpack-loader": "^7.0.1",
-        "js-yaml": "^4.0.0",
-        "mini-css-extract-plugin": "^1.3.9",
-        "node": "^16.20.1",
+        "js-yaml": "^4.1.0",
+        "mini-css-extract-plugin": "^1.6.2",
+        "node": "^18.18.2",
         "node-sass": "^8.0.0",
         "postcss-loader": "^4.2.0",
         "sass-loader": "^10.4.1",
-        "speed-measure-webpack-plugin": "^1.4.2",
+        "speed-measure-webpack-plugin": "^1.5.0",
         "webpack": "^4.47.0",
-        "webpack-bundle-analyzer": "^4.4.0",
+        "webpack-bundle-analyzer": "^4.10.1",
         "webpack-cli": "^3.3.10",
         "webpack-dev-server": "^3.11.2",
-        "webpackbar": "^5.0.0-3"
+        "webpackbar": "^5.0.2"
     }
 }
