--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
         "not IE 11"
     ],
     "dependencies": {
-        "@fortawesome/fontawesome-free": "5.13.0",
+        "@fortawesome/fontawesome-free": "6.5.1",
         "@glidejs/glide": "^3.6.0",
+        "@popperjs/core": "^2.11.8",
         "@vime-js/lite": "^1.6.6",
-        "bootstrap": "^4.6.2",
-        "font-awesome": "4.7.0",
-        "jquery": "3.4.1",
+        "bootstrap": "^5.3.2",
+        "jquery": "3.7.1",
         "lazysizes": "^5.3.1",
-        "popper.js": "^1.16.1",
         "rellax": "^1.12.1",
         "smooth-scroll": "^16.1.3"
     },
@@ -40,15 +39,18 @@
         "fast-glob": "^3.3.2",
         "file-loader": "^6.2.0",
         "filemanager-webpack-plugin": "^8.0.0",
-        "glob": "^7.1.6",
+        "glob": "^10.3.10",
         "html-webpack-plugin": "^5.6.0",
+        "image-minimizer-webpack-plugin": "^4.0.0",
         "image-webpack-loader": "^8.1.0",
+        "imagemin": "^8.0.1",
         "js-yaml": "^4.1.0",
         "mini-css-extract-plugin": "^2.7.7",
         "node": "^18.18.2",
         "node-sass": "^9.0.0",
         "postcss-loader": "^8.0.0",
         "sass-loader": "^14.0.0",
+        "smooth-scrollbar": "^8.8.4",
         "speed-measure-webpack-plugin": "^1.5.0",
         "webpack": "^5.90.0",
         "webpack-bundle-analyzer": "^4.10.1",
