chore: add imagemin dependencies

--- a/package.json
+++ b/package.json
@@ -44,6 +44,10 @@
         "image-minimizer-webpack-plugin": "^4.0.0",
         "image-webpack-loader": "^8.1.0",
         "imagemin": "^8.0.1",
+        "imagemin-gifsicle": "^7.0.0",
+        "imagemin-jpegtran": "^7.0.0",
+        "imagemin-optipng": "^8.0.0",
+        "imagemin-svgo": "^10.0.1",
         "js-yaml": "^4.1.0",
         "mini-css-extract-plugin": "^2.7.7",
         "node": "^18.18.2",
