--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "version": "7.0.0",
     "scripts": {
         "clean": "rm -rf node_modules && yarn",
-        "build": "cross-env NODE_ENV=development webpack --mode=development --config webpack.config.js",
-        "prod": "cross-env NODE_ENV=production webpack --mode=production --config webpack.config.js",
-        "watch": "cross-env NODE_ENV=development webpack-dev-server --mode=development --config webpack.config.js"
+        "build": "webpack --mode development --config webpack.config.js",
+        "prod": "webpack --mode production --config webpack.config.js",
+        "watch": "webpack --watch --config webpack.config.js",
+        "start": "webpack serve --mode development --config webpack.config.js"
     },
     "description": "Package for AJK website",
     "author": "Enamils",
